# testing-with-sea-orm

./: .gitignore  Cargo.toml  LICENSE  README.md
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20241031_000001_create_bakery_table.rs  m20241031_052346_create_chef_table.rs  main.rs
src/: lib.rs  log.rs  main.rs
src/domain/: contact_details.rs  mod.rs
src/repository/: bakery_repository.rs  chef_repository.rs  mod.rs
src/repository/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
tests/: integration_test.rs  integration_test_1.rs  integration_test_2.rs
tests/common/: mod.rs
