[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
#dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
#clap = "4.5.20"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres", # `DATABASE_DRIVER` feature
]

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"